[gd_scene load_steps=6 format=3 uid="uid://bk8003ry216vl"]

[ext_resource type="Script" path="res://scripts/candidate_panel.gd" id="1_o02ee"]
[ext_resource type="Texture2D" uid="uid://dj64jo6j11wrb" path="res://art/ui/panel_brown.png" id="2_dq3rm"]
[ext_resource type="Texture2D" uid="uid://cft4h1ehdqqy" path="res://art/Units/character_outside.png" id="3_l16i2"]
[ext_resource type="Texture2D" uid="uid://dyhwshhr60jao" path="res://art/Units/character_inside.png" id="4_m8lxo"]
[ext_resource type="Texture2D" uid="uid://dhtxcck2y2xn6" path="res://art/Units/hand.png" id="5_sedye"]

[node name="CandidatePanel" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_o02ee")

[node name="background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -155.0
offset_top = -155.0
offset_right = 155.0
offset_bottom = 155.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(155, 155)
texture = ExtResource("2_dq3rm")

[node name="name" type="Label" parent="background"]
layout_mode = 0
offset_left = 131.0
offset_top = 37.0
offset_right = 171.0
offset_bottom = 60.0

[node name="char_out" type="TextureRect" parent="background"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("3_l16i2")

[node name="char_in" type="TextureRect" parent="background/char_out"]
modulate = Color(0, 1, 1, 1)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("4_m8lxo")

[node name="hand_left" type="TextureRect" parent="background/char_out"]
layout_mode = 0
offset_left = -28.0
offset_top = 35.0
offset_right = 100.0
offset_bottom = 163.0
texture = ExtResource("5_sedye")

[node name="hand_right" type="TextureRect" parent="background/char_out"]
layout_mode = 0
offset_left = 29.0
offset_top = 34.0
offset_right = 157.0
offset_bottom = 162.0
texture = ExtResource("5_sedye")

[node name="stats" type="Label" parent="background"]
layout_mode = 0
offset_left = 36.0
offset_top = 153.0
offset_right = 272.0
offset_bottom = 277.0

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
